# squarbo_description

./: CMakeLists.txt  README.md  package.xml
launch/: rviz2.launch.py  squarbo_state_publisher.launch.py
rviz/: squarbo_model.rviz
urdf/: squarbo.urdf
