<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>squarbo_description</name>
  <version>2.0.1</version>
  <description>
    Squarbo Model
  </description>
  <license>Apache 2.0</license>
  <author email="borgesjvt@gmail.com">Joao Victor Torres Borges</author>
  <maintainer email="borgesjvt@gmail.com">Joao Victor Torres Borges</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <depend>urdf</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
